Removed _scripts and _data folders. Create a custom admin theme.

--- a/_config/fieldsets/page.yaml
+++ b/_config/fieldsets/page.yaml
@@ -5,7 +5,7 @@ fields:
     hide: true
 
   content:
-    display: Content
+    display: ''
     height: 500
     required: false
     type: markitup
