Updated settings.yaml to add Webfaction sub-domain to dev list.

--- a/_config/environments/dev.yaml
+++ b/_config/environments/dev.yaml
@@ -4,5 +4,4 @@
 #
 ###########################################################################################
 
-# Just an example use case
-# enable_analytics: no
+enable_analytics: no
