--- a/_config/settings.yaml
+++ b/_config/settings.yaml
@@ -113,7 +113,7 @@ _environments:
   dev:
     - 'http://localhost*'
     - 'http://tm.joedakroub.webfactional.com'
-    - 'test.site.dev'
+    - 'test.site.dev2'
     - '*.dev'
     - '*.localip'
   live:
