--- a/_config/settings.yaml
+++ b/_config/settings.yaml
@@ -113,6 +113,7 @@ _environments:
   dev:
     - 'http://localhost*'
     - 'http://tm.joedakroub.webfactional.com'
+    - 'test.dev'
     - '*.dev'
     - '*.localip'
   live:
