--- a/.htaccess
+++ b/.htaccess
@@ -34,3 +34,5 @@ RewriteRule ^/?(performances)$ $1?year=%1 [R=301,L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php [QSA,L]
+
+# TEST
