Added .htaccess redirects

--- a/.htaccess
+++ b/.htaccess
@@ -25,6 +25,10 @@ RewriteRule ^(.*)?\.html$ - [F,L]
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)\/(\?.*)?$ $1$2 [R=301,L]
 
+# Redirect old urls to new ones
+RewriteRule ^/?(discography/(.*))$ recordings [R=301,L]
+RewriteRule ^/?(schedule/(.*))$ performances [R=301,L]
+
 # Redirect /performances
 RewriteCond %{QUERY_STRING} !year [NC]
 RewriteCond %{TIME_YEAR} ^(.*)
