Added Social Links which are now used in the menu partial.

--- a/_config/fieldsets/social-link.yaml
+++ b/_config/fieldsets/social-link.yaml
@@ -4,9 +4,11 @@ hide: true
 
 fields:
   page_icon:
+    default: globe
     type: text
 
-  url:
+  social_url:
+    display: URL
     type: text
 
 include:
