Updated _config/settings and remove global_date_format to use format in settings.yaml.

--- a/_config/globals.yaml
+++ b/_config/globals.yaml
@@ -1,4 +1,3 @@
-global_date_format: 'F j, Y'
-global_datetime_format: 'Y-m-d'
+_datetime_format: 'Y-m-d'
 publisher_title: 'Visit Publisher site for more information about this recording'
-upcoming_performances_total: 6
+upcoming_performances_total: 7
