--- a/_config/environments/live.yaml
+++ b/_config/environments/live.yaml
@@ -4,4 +4,4 @@
 #
 ###########################################################################################
 
-enable_analytics: yes
+enable_analytics: true
