--- a/_config/settings.yaml
+++ b/_config/settings.yaml
@@ -115,7 +115,7 @@ _environments:
     - '*.dev'
     - '*.localip'
   live:
-    - 'http://tm.joedakroub.webfactional.com'
+    - 'tm.joedakroub.webfactional.com'
     - 'timothymcallister.com'
 
 # Set to 'true' if you want to log system messages
