--- a/_config/environments/dev.yaml
+++ b/_config/environments/dev.yaml
@@ -4,4 +4,4 @@
 #
 ###########################################################################################
 
-enable_analytics: false
+enable_analytics: no
