Another try at settings.yaml

--- a/_config/settings.yaml
+++ b/_config/settings.yaml
@@ -113,7 +113,7 @@ _environments:
   dev:
     - '*.dev'
   live:
-    - 'http://http://tm.joedakroub.webfactional.com'
+    - '*.com'
 
 # Set to 'true' if you want to log system messages
 _log_enabled: true
