Removed Audiofile fieldtype.

--- a/_config/fieldsets/recording.yaml
+++ b/_config/fieldsets/recording.yaml
@@ -44,7 +44,7 @@ fields:
     destination: assets/audio
     display: ''
     instructions: Sample must be in MP3 format
-    type: audiofile
+    type: file
 
   section_3:
     display: Performers
