Added Adams Page checkbox for quotes.

--- a/_config/fieldsets/quote.yaml
+++ b/_config/fieldsets/quote.yaml
@@ -9,5 +9,10 @@ fields:
   content:
     type: markitup
 
+  adams_press:
+    default: 0
+    display: Adams Press Page
+    type: checkbox
+
 include:
   - hidden
