--- a/_config/fieldsets/artwork.yaml
+++ b/_config/fieldsets/artwork.yaml
@@ -7,7 +7,7 @@ fields:
 
   artwork:
     allowed: [jpg]
-    default: '{{ _site_root }}assets/img/tim-news.jpg'
+    default: '{{ _site_root }}assets/img/tim-press.jpg'
     destination: assets/img
     display: ''
     instructions: JPG format only
