Refactored the Adams page per Tim

--- a/_config/fieldsets/adams-concerto.yaml
+++ b/_config/fieldsets/adams-concerto.yaml
@@ -132,8 +132,17 @@ fields:
     display: Section Heading
     type: text
 
+  section_5:
+    display: Critics
+    type: section
+
+  critics_title:
+    display: Section Heading
+    type: text
+
 hide: true
 
 include:
   - hidden
+  - quotes
   - artwork
