Updated design of Contact page. Added contact.yaml fieldset.

--- a/_config/fieldsets/quote.yaml
+++ b/_config/fieldsets/quote.yaml
@@ -11,7 +11,7 @@ fields:
 
   adams_press:
     default: 0
-    display: Adams Press Page
+    display: Should appear on the Adams Saxophone Concerto page
     type: checkbox
 
 include:
