--- a/_config/fieldsets/contact.yaml
+++ b/_config/fieldsets/contact.yaml
@@ -1,98 +1,10 @@
 title: Contact
 
-fields:
-  artwork:
-    allowed: [jpg]
-    destination: assets/img
-    display: Artwork
-    instructions: Artwork must be in JPG format
-    type: file
-
-  name:
-    type: text
-
-  position:
-    type: text
-
-  organization:
-    type: text
-
-  unit:
-    type: text
-
-  address_1:
-    display: Address 1
-    type: text
-
-  address_2:
-    display: Address 2
-    type: text
-
-  city:
-    type: text
-
-  state:
-    options:
-      AL: Alabama
-      AK: Alaska
-      AZ: Arizona
-      AR: Arkansas
-      CA: California
-      CO: Colorado
-      CT: Connecticut
-      DE: Delaware
-      DC: District of Columbia
-      FL: Florida
-      GA: Georgia
-      HI: Hawaii
-      ID: Idaho
-      IL: Illinois
-      IN: Indiana
-      IA: Iowa
-      KS: Kansas
-      KY: Kentucky
-      LA: Louisiana
-      ME: Maine
-      MD: Maryland
-      MA: Massachusetts
-      MI: Michigan
-      MN: Minnesota
-      MS: Mississippi
-      MO: Missouri
-      MT: Montana
-      NE: Nebraska
-      NV: Nevada
-      NH: New Hampshire
-      NJ: New Jersey
-      NM: New Mexico
-      NY: New York
-      NC: North Carolina
-      ND: North Dakota
-      OH: Ohio
-      OK: Oklahoma
-      OR: Oregon
-      PA: Pennsylvania
-      RI: Rhode Island
-      SC: South Carolina
-      SD: South Dakota
-      TN: Tennessee
-      TX: Texas
-      UT: Utah
-      VT: Vermont
-      VA: Virginia
-      WA: Washington
-      WV: West Virginia
-      WI: Wisconsin
-      WY: Wyoming
-    type: select
-
-  zip_code:
-    type: text
-
-  email:
-    type: text
-
 hide: true
+
+fields:
+  content:
+    type: markitup
 
 include:
   - hidden
