--- a/_config/users/tmcallister.yaml
+++ b/_config/users/tmcallister.yaml
@@ -4,5 +4,6 @@ last_name: McAllister
 roles:
   - admin
 email: mcallitp@gmail.com
-password: "p@ssw0rd"
+password: p@ssw0rd
+_uid: pzTwwL53e574577e0744RrRY1sw
 ---
