--- a/_config/formsets/mailing-list.yaml
+++ b/_config/formsets/mailing-list.yaml
@@ -3,12 +3,14 @@ submission_save_path: _forms/mailing-list/
 # Fields allowed to be submitted in the form, automatically
 # purging anything and everything else
 allowed:
+  - name
   - email
 
 # You are not required to require fields, but once you do, any missing
 # from the POST will squash this submission and send a list of
 # missing fields to your {{ raven:errors }} tagpair
 required:
+  - name
   - email
 
 submission_save_extension: yaml
@@ -16,6 +18,7 @@ submission_save_extension: yaml
 # Apply validation rules to specific fields. Refer to documentation
 # for a full list of available rules and their format
 validate:
+  name: alpha
   email: email
 
 # Error messages can be mapped to your fields and passed to the
@@ -28,6 +31,7 @@ validate:
 # {{ /raven:error }}
 #
 messages:
+  name: "Must be a valid name"
   email: "must be a valid address"
 
 # Configure notification email
@@ -43,4 +47,5 @@ datestamp_format: "m/d/Y"
 
 control_panel:
   fields:
+    - name
     - email
