Testing a new image technique

--- a/_config/fieldsets/live-performances.yaml
+++ b/_config/fieldsets/live-performances.yaml
@@ -1,19 +1,7 @@
-title: Live Performance
+title: Live Performances
 
-fields:
-  composer:
-    type: text
-
-  section_2:
-    display: Audio Sample
-    type: section
-
-  sample:
-    allowed: [mp3]
-    destination: assets/audio
-    display: ''
-    instructions: Sample must be in MP3 format
-    type: audiofile
+hide: true
 
 include:
- - hidden
+  - hidden
+  - hero
