Updated email address for forms

--- a/_config/formsets/mailing-list.yaml
+++ b/_config/formsets/mailing-list.yaml
@@ -32,8 +32,8 @@ messages:
 
 # Configure notification email
 email:
-  to: joe.dakroub@me.com
-  from: joe.dakroub@me.com
+  to: mcallitp@gmail.com
+  from: mail@timothymcallister.com
   subject: Timothy McAllister Mailing List Submission
   automagic: true
   # html_template: html_email
