--- a/_config/formsets/messages.yaml
+++ b/_config/formsets/messages.yaml
@@ -39,8 +39,8 @@ messages:
 
 # Configure notification email
 email:
-  to: joe.dakroub@me.com
-  from: joe.dakroub@me.com
+  to: mcallitp@gmail.com
+  from: mail@timothymcallister.com
   subject: Timothy McAllister Message Submission
   automagic: true
   # html_template: html_email
