--- a/_config/globals.yaml
+++ b/_config/globals.yaml
@@ -1,3 +1,4 @@
 _datetime_format: 'Y-m-d'
 publisher_title: 'Visit Publisher site for more information about this recording'
 upcoming_performances_total: 5
+random_quote_total: 10
