--- a/.htaccess
+++ b/.htaccess
@@ -26,7 +26,7 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)\/(\?.*)?$ $1$2 [R=301,L]
 
 # Redirect old urls to new ones
-RewriteRule ^/?(applause(.*))$ applause [R=301,L]
+RewriteRule ^/?(applause/(.*))$ applause [R=301,L]
 RewriteRule ^/?(discography(.*))$ recordings [R=301,L]
 RewriteRule ^/?(schedule(.*))$ performances [R=301,L]
 
