--- a/_config/settings.yaml
+++ b/_config/settings.yaml
@@ -73,7 +73,7 @@ _enable_smartypants: true
 _theme_cache_bust: false
 
 # Specify where to save transformed images
-_transform_destination: false
+_transform_destination: assets/img/transforms
 
 # allow the use of PHP in Statamic templates
 _allow_php: false
