Updated to Statamic 1.10.3

--- a/.htaccess
+++ b/.htaccess
@@ -1,46 +1,45 @@
 # Turn on the Rewrite Engine
 RewriteEngine On
 
-# If you're running in a subfolder (like http://example.com/statamic),
-# add that here. E.g. /statamic/
+
+# ------------------------------------------------------------------------------
+# RewriteBase
+# ------------------------------------------------------------------------------
+# Ensure this matches your _site_root
 RewriteBase /
 
-# Protect your system files from prying eyes
-RewriteRule ^(_app) - [F,L]
-RewriteRule ^(_config) - [F,L]
-RewriteRule ^(_cache) - [F,L]
-RewriteRule ^(_content) - [F,L]
-RewriteRule ^(_logs) - [F,L]
-RewriteRule ^(admin/themes/[^/]*/(?:layouts|templates)) - [F,L]
-RewriteRule ^(.*)?\.yml$ - [F,L]
-RewriteRule ^(.*)?\.yaml$ - [F,L]
-RewriteRule ^(.*/)?\.git+ - [F,L]
+
+# ------------------------------------------------------------------------------
+# Protect System Files
+# ------------------------------------------------------------------------------
+RewriteRule ^_app - [F,L]
+RewriteRule ^_config - [F,L]
+RewriteRule ^_cache - [F,L]
+RewriteRule ^_content - [F,L]
+RewriteRule ^_logs - [F,L]
+RewriteRule ^_storage - [F,L]
+RewriteRule ^admin/themes/[^/]*/(?:layouts|templates) - [F,L]
+RewriteRule ^.*?\.yml$ - [F,L]
+RewriteRule ^.*?\.yaml$ - [F,L]
+RewriteRule ^.*/?\.git+ - [F,L]
 
 # This will prevent all .html files from being accessed.
 # You may want to remove this line if you want to serve
 # static files outside of Statamic
-RewriteRule ^(.*)?\.html$ - [F,L]
+# RewriteRule ^(.*)?\.html$ - [F,L]
 
-# Remove trailing slashes from your URL
+
+# ------------------------------------------------------------------------------
+# Remove Trailing Slashes from URL
+# ------------------------------------------------------------------------------
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)\/(\?.*)?$ $1$2 [R=301,L]
 
-# Redirect old urls to new ones
-RewriteRule ^/?(applause/(.*))$ applause [R=301,L]
-RewriteRule ^/?(applause.asp)$ applause [R=301,L]
-RewriteRule ^/?(biography.asp)$ biography [R=301,L]
-RewriteRule ^/?(discography.asp)$ discography [R=301,L]
-RewriteRule ^/?(links.asp)$ / [R=301,L]
-RewriteRule ^/?(premieres.asp)$ premieres [R=301,L]
-RewriteRule ^/?(discography(.*))$ recordings [R=301,L]
-RewriteRule ^/?(schedule(.*))$ performances [R=301,L]
 
-# Redirect /performances
-RewriteCond %{QUERY_STRING} !year [NC]
-RewriteCond %{TIME_YEAR} ^(.*)
-RewriteRule ^/?(performances)$ $1?year=%1 [R=301,L]
-
-# Remove the index.php
+# ------------------------------------------------------------------------------
+# Remove the Index File
+# ------------------------------------------------------------------------------
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php [QSA,L]
+
